src/styles/global.css
/* ... */
#nav-toggle {
    list-style-type: none;
    cursor: pointer;
    display:flex;
    align-items:center;
}

#nav-toggle::before {
	height:40px;
	width:40px;
    background:var(--color-accent-1);
    content: '';
	mask-image:url(/img/burger.svg);
	-webkit-mask-image:url(/img/burger.svg);
	mask-size:40px;
	-webkit-mask-size:40px;
}

#nav-toggle::-webkit-details-marker {
    display: none;
}

#burger[open] > summary::before {
    content: '';
	mask-image:url(/img/close.svg);
	-webkit-mask-image:url(/img/close.svg);
	mask-size:40px;
	-webkit-mask-size:40px;
}

.skip a {
    position:absolute;
    left:-10000px;
    top:auto;
    width:1px;
    height:1px;
    overflow:hidden;
}
 
.skip a:focus {
    position:static;
    width:auto;
    height:auto;
}

#nav-menu {
    z-index:1000;
    /* position:relative; */
    padding: 1rem;
    max-height: calc(100vh - 2.5rem);
    overflow: auto;
}

#nav-menu ul {
    list-style:none;
    text-align:center;
}

#nav-menu li {
    margin-left: -40px; /* idfk why i have to do this to remove whitespace */
}

#nav-menu details {
    text-align: center;
}

#nav-skip {
    font-size: 80%;
}



/* settings menu */
#access {
    position:fixed;
    top: 5px;
    right: 0px;
    z-index:1000;
    background-color: transparent;
}

#access[open] {
	background-color: var(--color-bg-second);
    color: var(--color-text-primary);
    width: fit-content;
    padding: 1rem 2rem;
    border: solid 3px var(--color-accent-2);
    border-right: 0;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    text-align: center;
    max-height: calc(100vh - 10px);
    overflow: auto;
    z-index: 900;
}

#access-toggle {
    list-style-type: none;
    cursor: pointer;
    display:flex;
    align-items:center;
}

#access-toggle::before {
    width: 38px;
    height: 38px;
    background-color:var(--color-accent-1);
    background-image: url(/img/icons8-accessibility-64.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: 32px 32px;
    content: '';
    border: solid 2px var(--color-accent-2);
    border-right: 0;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;

}

#access-toggle::-webkit-details-marker {
    display: none;
}

#access[open] > summary {
    display: block;
    text-align: right;
}

#access[open] > summary::before {
    content: 'close';
    text-decoration: underline;
    height: fit-content;
    color: var(--color-text-primary);
    z-index: 1000;
    background: none;
    border: 0;
}

#access-menu h2 {
    font-size: 1rem;
    font-family: var(--font-main);
    font-weight: bold;
    color: var(--color-text-second);
    margin-top: 0.5rem;
}

#access-menu a {
    color: var(--color-text-second);
}

.access-button {
    display: block;
    background-color: transparent;
    color: var(--color-text-second);
    text-decoration: underline;
    cursor: pointer;
    border: 0;
    margin: 1rem auto 0;
}

#access-menu span, #access-menu label {
    display: block;
}

#access-menu label {
    margin-top: 1rem;
}

#to-top-button {
    display: block;
    position: fixed;
    right: 5px;
    bottom: 5px;
    margin: 0;
    /* padding: 4px; */
    background-color: var(--color-accent-1);
    border: solid 2px var(--color-accent-2);
    border-radius: 5px;
    text-decoration: none;
    font-size: 1.75rem;
}


/* page specific */


/* splash page */
body.splash {
    background-image: url("/img/SpaceBackground17.png");
}

main.splash {
    border: 0;
    background-color: transparent;
}

#splash-title {
    font-size: min(450%, 14vi);
    text-align: center;
    margin-top: 3rem;
}

.buttons.splash {
    gap: 8px;
}



/* home page */

.webrings {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    justify-content: center;
    gap: 0.8rem;
}

#linkback-button {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    gap: 1rem;
}

#linkback-button img {
    margin: auto;
}

.changelog-box {
    height: 30ch;
    overflow: auto;
    text-align: start;
}

.changelog-box ul {
    padding-left: 1rem;
}

.sidebar {
    margin: 0.5rem 0;
}

.sidebar img {
    margin: auto;
}

#statuscafe {
    padding: .5em;
    border: 1px solid var(--color-accent-2);
    font-size: 0.8rem;
    margin-bottom: 1rem;
}
#statuscafe-username {
    margin-bottom: .5em;
}
#statuscafe-content {
    margin: 0 1em 0.5em 1em;
}

/* about me */

.blinkies img {
    width: 150px;
    height: 20px;
}

/* changelog full */

.changelog li {
    padding: 0.4rem;
}

.changelog li:nth-of-type(2n) {
    background-color: var(--color-bg-fourth);
}

/* tags */

.tags {
    display: flex;
    flex-wrap: wrap;
}

.tag {
    margin: 0.25em;
    border: dotted 2px var(--color-accent-2);
    border-radius: 0.5em;
    padding: 0.3em 0.7em;
    font-size: 1.15em;
}

/* post's */

.post {
    margin-bottom: 2rem;
}

.post-hero {
    background-color: var(--color-bg-second);
    padding: 1rem;
    margin: 0 auto 2.5rem;
    width: fit-content;
    max-width: calc(100vw - 2rem);
}

.post-hero img {
    margin: 0.5rem auto;
    max-width: 100%;
    height: auto;
}

.post-hero figcaption {
    font-size: 85%;
    color: var(--color-accent-1);
}

.post p {
    text-indent: 4ch;
}

.post p:first-of-type {
    text-indent: 0;
}

.toc {
    margin-bottom: 2rem;
    width: fit-content;
    margin-left: 0;
}

.toc h2 {
    margin-top: 0;
}

.toc ul {
    padding-left: 1rem;
}

.sidebar .toc {
    width: 100%;
    text-align: start;
}

.license-box, .warning-box {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    align-items: center;
}

.license-box img {
    width: 88px;
    height: auto;
}

.license-box p, .warning-box p {
    text-indent: 0;
    margin: 0;
}

.warning-box img {
    height: 100px;
    width: auto;
}

/* OC pages */

table {
    background-color: var(--color-bg-second);
    border-collapse: collapse;
    border: 2px solid var(--color-accent-3);

}

table th, td {
}
/* ... */

